syntax = "proto3";
package pb;
option go_package = "gochat/pb";

import "common.proto";

message LoginRequest {
    string username = 1;
    string password = 2;
    optional bool is_persisted = 3;
    optional bool is_admin = 4;
}
message LoginResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message AutoLoginRequest {
    string refresh_token = 1;
    optional bool is_admin = 2;
}
message AutoLoginResponse {
    string access_token = 1;
}

message RenewTokenRequest {
    string refresh_token = 1;
}
message RenewTokenResponse {
    string access_token = 1;
}

message LogoutRequest {
    string refresh_token = 1;
}