syntax = "proto3";
package pb;
option go_package = "gochat/pb";

import "common.proto";

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string role = 3;
}
message CreateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int64 user_id = 1;
}

message UpdateUserRequest {
    int64 user_id = 1;
    optional string username = 2;
    optional string password = 3;
    optional string nickname = 4;
    optional string avatar = 5;
    optional string bio = 6;
    optional string role = 7;
    optional bool deleted = 8;
}
message UpdateUserResponse {
    User user = 1;
}

message ListUsersRequest {
    int64 page_id = 1;
    int64 page_size = 2;
}
message ListUsersResponse {
    int64 total = 1;
    repeated User users = 2;
}